--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "coding-time-recorder",
+  "name": "usermanagement",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
@@ -14,8 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js --watch ./*.js"
   },
   "author": "",
   "license": "ISC"
