added usermodelname to config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "database":{
-        "connectionString": "mongodb://localhost:27017/lollers"
+        "connectionString": "mongodb://localhost:27017/lollers",
+        "usermodelname": "user"
     },
     "account":{
         "username":{
