--- a/config.json
+++ b/config.json
@@ -23,6 +23,10 @@
         "http": {
             "enabled": true,
             "port": 8080
+        },
+        "https": {
+            "enabled": true,
+            "port": 3000
         }
     }
 }
